# FlashKDA-mlx

./: .gitignore  BENCHMARK_H20.md  BENCHMARK_MLX.md  LICENSE  README.md  pyproject.toml
benchmarks/: __init__.py  _harness.py  bench_fwd.py  generate_benchmark_mlx_md.py  pr_g_profile.py  profile_fwd.py  section_timings.py
docs/: 20260501-flashkda-mlx-v1-deep-dive.md
flash_kda_mlx/: __init__.py  _metal_prepare.py  _metal_recurrence.py  _validation.py  ops.py  optimized.py  reference.py
flash_kda_mlx/baselines/: __init__.py  chunk_gdn.py  chunk_kda.py
scripts/: _compare_with_chunk_kda.py  generate_parity_fixtures.py  torch_ref_cpu.py
tests/: _helpers.py  conftest.py  test_api_contract.py  test_bench_harness_correspondence.py  test_benchmark_formatting.py  test_chunk32.py  test_chunk_baseline_torch_reference.py  test_chunk_gdn_baseline.py  test_chunk_kda_baseline.py  test_metal_cross_chunk.py  test_metal_packed_cross_chunk.py  test_metal_prepare.py  test_metal_prepare_e2e.py  test_metal_prepare_fused.py  test_metal_prepare_fused_v2.py  test_metal_prepare_fused_v3.py  test_metal_prepare_fused_v4.py  test_metal_recurrence_flat_ragged.py  test_metal_simdgroup_matmul.py  test_optimized_parity.py  test_packed_heuristic.py  test_parity_fixtures.py  test_reference_forward.py  test_state_io.py  test_varlen.py
tests/fixtures/: fixed__T16__H1__no_state__seed0.npz  fixed__T16__H1__state_in_only_bf16__seed0.npz  fixed__T16__H1__state_in_out_bf16__seed0.npz  fixed__T16__H1__state_in_out_fp32__seed0.npz  fixed__T16__H1__state_out_only_bf16__seed0.npz  (+49 more)
